# dotmine

./: .gitignore  README.md  meson.build
include/: add.h  flags.h  utils.h
src/: flags.c  main.c  utils.c
